package ii.pfc.command;

public interface CommandRequest {

    void onReceive();

}
