package ii.pfc.command;

public interface CommandResponse {

}
