package ii.pfc.manager;

public class RegionManager implements IRegionManager {

}
